# Projet_ETL

./: .env-example  .gitignore  .pdm-python  Exemple.yaml  README.fr.md  README.md  etl.py  filters.yaml  filtred_monsters.csv  filtred_monsters.json  orders.yaml  pyproject.toml
.github/workflows/: static.yml
project_utils/: index.html
src/: main.py
src/data/: listIndex.csv  monsters.json  monsters_mock.json
src/etl/: etl.py
src/modules/listDetails/: extract.py  load.py  transform.py
src/modules/listIndex/: extract.py  load.py  transform.py
src/modules/monsters/: README.md  transform.py
src/services/core/: data_frame.py  yaml_interpretor.py
src/services/extract/: extractor_handler.py  getApi.py  getCsv.py  getJson.py
src/services/load/: loadCSV.py  loadJson.py  load_handler.py
src/services/transform/: README.md  apply_filters.py  apply_type_filters.py  extract_by_tags.py  filter_by_order.py  get_needed_keys.py  transform_handler.py
