[project]
name = "ETL"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kozka.c",email = "corentin.kozk@gmail.com"},
]
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "CC-BY-NC-ND"}


[tool.pdm]
distribution = false
